--- a/index.html
+++ b/index.html
@@ -14,12 +14,36 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-
-    </header>
-    <main>
-
-    </main>
+    <div class="flex">
+        <header class="flex flex-column txt-grey">
+            <img class="logo" src="img/logo.svg" alt="">
+            <nav>
+                <ul>
+                    <li class="flex"><img src="img/home.svg" alt="Home"><div><a href="#">Home</a></div></li>
+                    <li class="flex"><img src="img/search.svg" alt="Cerca"><div><a href="#">Cerca</a></div></li>
+                    <li class="flex"><img src="img/libreria.svg" alt="Libreria"><a href="#">La tua libreria</a></li>
+                </ul>
+            </nav>
+            <h1 class="txt-upperc txt-white">playlist</h1>
+            <button class="txt-grey flex"> <i class="fa-solid fa-square-plus"></i><div>Crea Playlist</div></button>
+            <div class="overflow grow">
+                <ul>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                    <li><a href="#">Nome Playlist</a></li>
+                </ul>
+            </div>
+            <button class="txt-grey flex"><img src="img/download.svg" alt="Scarica"><small>Installa app</small></button>
+            <button class="flex"><img class="circle" src="img/profile.svg" alt="profilo"><a class="txt-white" href="#">John Doe</a></button>
+        </header>
+        <main>
+            
+        </main>
+    </div>
     <footer>
         
     </footer>
