--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="flex"><img src="img/libreria.svg" alt="Libreria"><a href="#">La tua libreria</a></li>
                 </ul>
             </nav>
-            <h1 class="txt-upperc txt-white">playlist</h1>
+            <h1 class="txt-upperc">playlist</h1>
             <button class="txt-grey flex"> <i class="fa-solid fa-square-plus"></i><div>Crea Playlist</div></button>
             <div class="overflow grow">
                 <ul>
@@ -40,8 +40,60 @@
             <button class="txt-grey flex"><img src="img/download.svg" alt="Scarica"><small>Installa app</small></button>
             <button class="flex"><img class="circle" src="img/profile.svg" alt="profilo"><a class="txt-white" href="#">John Doe</a></button>
         </header>
-        <main>
-            
+        <main class="overflow">
+            <section class="top-main flex">
+                <div>
+                    <button class="txt-upperc txt-white">effettua l'upgrade</button>
+                </div>
+            </section>
+            <section class="bottom-main">
+                   <nav class="txt-grey txt-upperc">
+                        <ul class="flex wrap">
+                            <li><a href="#"></a>in evidenza</li>
+                            <li><a href="#"></a>podcast</li>
+                            <li><a href="#"></a>classifiche</li>
+                            <li><a href="#"></a>generi e mood</li>
+                            <li><a href="#"></a>nuove uscite</li>
+                            <li><a href="#"></a>scopri</li>
+                        </ul>
+                    </nav>
+                    <div class="container">
+                        <h2 class="txt-white">Recently played</h2>
+                        <div class="flex wrap txt-center">
+                            <div class="card">
+                                <img src="img/metal_lifting.jpg" alt="Metal">
+                                <h3 class="txt-white">Heavy Metal</h3>
+                                <div class="txt-grey"><small>Subtitle</small></div>
+                            </div>
+                            <div class="card">
+                                <img src="img/stranger.jpeg" alt="Stranger">
+                                <h3 class="txt-white">Stranger Things, vol. 1 (a Netflix Original Series Soundtrack) </h3>
+                                <div class="txt-grey"><small>Kyle Dixon & Michael Stein</small></div>
+                            </div>
+                            <div class="card">
+                                <img src="img/aquietplace.jpeg" alt="Quiet">
+                                <h3 class="txt-white">A quiet place</h3>
+                                <div class="txt-grey"><small>Subtitle</small></div>
+                            </div>
+                            <div class="card">
+                                <img src="img/split.jpeg" alt="Split">
+                                <h3 class="txt-white">Split</h3>
+                                <div class="txt-grey"><small>Subtitle</small></div>
+                            </div>
+                            <div class="card">
+                                <img src="img/cure.jpeg" alt="Cure">
+                                <h3 class="txt-white">A cure for wellness</h3>
+                                <div class="txt-grey"><small>Subtitle</small></div>
+                            </div>
+                            <div class="card">
+                                <img src="img/sinister.jpeg" alt="Sinister">
+                                <h3 class="txt-white">Sinister</h3>
+                                <div class="txt-grey"><small>Subtitle</small></div>
+                            </div>
+                        </div>
+
+                    </div>
+            </section>
         </main>
     </div>
     <footer>
