--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                     <li class="flex"><img src="img/libreria.svg" alt="Libreria"><a href="#">La tua libreria</a></li>
                 </ul>
             </nav>
-            <h1 class="txt-upperc">playlist</h1>
+            <h1 class="txt-upperc txt-white">playlist</h1>
             <button class="txt-grey flex"> <i class="fa-solid fa-square-plus"></i><div>Crea Playlist</div></button>
             <div class="overflow grow">
                 <ul>
@@ -48,50 +48,95 @@
             </section>
             <section class="bottom-main">
                    <nav class="txt-grey txt-upperc">
-                        <ul class="flex wrap">
-                            <li><a href="#"></a>in evidenza</li>
-                            <li><a href="#"></a>podcast</li>
-                            <li><a href="#"></a>classifiche</li>
-                            <li><a href="#"></a>generi e mood</li>
-                            <li><a href="#"></a>nuove uscite</li>
-                            <li><a href="#"></a>scopri</li>
+                        <ul class="flex">
+                            <li><a href="#">in evidenza</a></li>
+                            <li><a href="#">podcast</a></li>
+                            <li><a href="#">classifiche</a></li>
+                            <li><a href="#">generi e mood</a></li>
+                            <li><a href="#">nuove uscite</a></li>
+                            <li><a href="#">scopri</a></li>
                         </ul>
                     </nav>
                     <div class="container">
-                        <h2 class="txt-white">Recently played</h2>
+                        <h2>Recently played</h2>
                         <div class="flex wrap txt-center">
                             <div class="card">
-                                <img src="img/metal_lifting.jpg" alt="Metal">
-                                <h3 class="txt-white">Heavy Metal</h3>
+                                <div class="position">
+                                    <img src="img/metal_lifting.jpg" alt="Metal">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Heavy Metal</h3>
                                 <div class="txt-grey"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
-                                <img src="img/stranger.jpeg" alt="Stranger">
-                                <h3 class="txt-white">Stranger Things, vol. 1 (a Netflix Original Series Soundtrack) </h3>
+                                <div class="position">
+                                    <img src="img/stranger.jpeg" alt="Stranger">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Stranger Things, vol. 1 (a Netflix Original Series Soundtrack) </h3>
                                 <div class="txt-grey"><small>Kyle Dixon & Michael Stein</small></div>
                             </div>
                             <div class="card">
-                                <img src="img/aquietplace.jpeg" alt="Quiet">
-                                <h3 class="txt-white">A quiet place</h3>
+                                <div class="position">
+                                    <img src="img/aquietplace.jpeg" alt="Quiet">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>A quiet place</h3>
                                 <div class="txt-grey"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
-                                <img src="img/split.jpeg" alt="Split">
-                                <h3 class="txt-white">Split</h3>
+                                <div class="position">
+                                    <img src="img/split.jpeg" alt="Split">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Split</h3>
                                 <div class="txt-grey"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
-                                <img src="img/cure.jpeg" alt="Cure">
-                                <h3 class="txt-white">A cure for wellness</h3>
+                                <div class="position">
+                                    <img src="img/cure.jpeg" alt="Cure">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>A cure for wellness</h3>
                                 <div class="txt-grey"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
-                                <img src="img/sinister.jpeg" alt="Sinister">
-                                <h3 class="txt-white">Sinister</h3>
+                                <div class="position">
+                                    <img src="img/sinister.jpeg" alt="Sinister">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Sinister</h3>
                                 <div class="txt-grey"><small>Subtitle</small></div>
                             </div>
                         </div>
-
+                    </div>
+                    <div class="container">
+                        <h2>Creato per John Doe</h2>
+                        <div><small class="txt-grey">Più ascolti, più accurati saranno i suggerimenti.</small></div>
+                        <div class="flex wrap txt-center">
+                            <div class="card">
+                                <div class="position">
+                                    <img src="img/radar.jpeg" alt="Radar">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Relase Radar</h3>
+                            </div>
+                            <div class="card">
+                                <div class="position">
+                                    <img src="img/mixdaily.jpeg" alt="Daily-mix">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Daily Mix 1</h3>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="container">
+                        <h2>Artisti più popolari</h2>
+                        <div><small class="txt-grey">Più ascolti, più accurati saranno i suggerimenti.</small></div>
+                        <div class="flex wrap txt-center">   
+                            <img class="circle" src="img/youg.jpeg" alt="Youg">
+                            <img class="circle" src="img/einaudi.jpeg" alt=""> 
+                        </div>
                     </div>
             </section>
         </main>
