--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <div class="flex">
-        <header class="flex flex-column txt-grey">
+    <div class="container-vh flex">
+        <header class="flex flex-column txt-gray">
             <img class="logo" src="img/logo.svg" alt="">
             <nav>
                 <ul>
@@ -25,7 +25,7 @@
                 </ul>
             </nav>
             <h1 class="txt-upperc txt-white">playlist</h1>
-            <button class="txt-grey flex"> <i class="fa-solid fa-square-plus"></i><div>Crea Playlist</div></button>
+            <button class="txt-gray flex"> <i class="fa-solid fa-square-plus"></i><div>Crea Playlist</div></button>
             <div class="overflow grow">
                 <ul>
                     <li><a href="#">Nome Playlist</a></li>
@@ -37,7 +37,7 @@
                     <li><a href="#">Nome Playlist</a></li>
                 </ul>
             </div>
-            <button class="txt-grey flex"><img src="img/download.svg" alt="Scarica"><small>Installa app</small></button>
+            <button class="txt-gray flex"><img src="img/download.svg" alt="Scarica"><small>Installa app</small></button>
             <button class="flex"><img class="circle" src="img/profile.svg" alt="profilo"><a class="txt-white" href="#">John Doe</a></button>
         </header>
         <main class="overflow">
@@ -47,7 +47,7 @@
                 </div>
             </section>
             <section class="bottom-main">
-                   <nav class="txt-grey txt-upperc">
+                   <nav class="txt-gray txt-upperc">
                         <ul class="flex">
                             <li><a href="#">in evidenza</a></li>
                             <li><a href="#">podcast</a></li>
@@ -66,7 +66,7 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>Heavy Metal</h3>
-                                <div class="txt-grey"><small>Subtitle</small></div>
+                                <div class="txt-gray"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
                                 <div class="position">
@@ -74,7 +74,7 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>Stranger Things, vol. 1 (a Netflix Original Series Soundtrack) </h3>
-                                <div class="txt-grey"><small>Kyle Dixon & Michael Stein</small></div>
+                                <div class="txt-gray"><small>Kyle Dixon & Michael Stein</small></div>
                             </div>
                             <div class="card">
                                 <div class="position">
@@ -82,7 +82,7 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>A quiet place</h3>
-                                <div class="txt-grey"><small>Subtitle</small></div>
+                                <div class="txt-gray"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
                                 <div class="position">
@@ -90,7 +90,7 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>Split</h3>
-                                <div class="txt-grey"><small>Subtitle</small></div>
+                                <div class="txt-gray"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
                                 <div class="position">
@@ -98,7 +98,7 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>A cure for wellness</h3>
-                                <div class="txt-grey"><small>Subtitle</small></div>
+                                <div class="txt-gray"><small>Subtitle</small></div>
                             </div>
                             <div class="card">
                                 <div class="position">
@@ -106,13 +106,13 @@
                                     <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
                                 </div>
                                 <h3>Sinister</h3>
-                                <div class="txt-grey"><small>Subtitle</small></div>
+                                <div class="txt-gray"><small>Subtitle</small></div>
                             </div>
                         </div>
                     </div>
                     <div class="container">
                         <h2>Creato per John Doe</h2>
-                        <div><small class="txt-grey">Più ascolti, più accurati saranno i suggerimenti.</small></div>
+                        <div><small class="txt-gray">Più ascolti, più accurati saranno i suggerimenti.</small></div>
                         <div class="flex wrap txt-center">
                             <div class="card">
                                 <div class="position">
@@ -132,7 +132,7 @@
                     </div>
                     <div class="container">
                         <h2>Artisti più popolari</h2>
-                        <div><small class="txt-grey">Più ascolti, più accurati saranno i suggerimenti.</small></div>
+                        <div><small class="txt-gray">Più ascolti, più accurati saranno i suggerimenti.</small></div>
                         <div class="flex wrap txt-center">   
                             <img class="circle" src="img/youg.jpeg" alt="Youg">
                             <img class="circle" src="img/einaudi.jpeg" alt=""> 
@@ -142,7 +142,55 @@
         </main>
     </div>
     <footer>
-        
+        <div class="container flex">
+            <div class="left flex">
+                <img src="img/sinister.jpeg" alt="Sinister">
+                <div class="brano">
+                    <h1>Sinister</h1>
+                    <div class="txt-gray"><small>Brano Nome</small></div>
+                </div>
+                <div class="flex">
+                    <button class="txt-gray"><i class="fa-regular fa-heart"></i></button>
+                    <button class="txt-gray"><i class="fa-regular fa-folder"></i></button>
+                </div>
+            </div>
+            <div class="center">
+                <div class="player">
+                    <ul class="flex">
+                        <li><i class="fa-solid fa-shuffle"></i></li>
+                        <li><i class="fa-solid fa-backward-step"></i></li>
+                        <li><i class="fa-regular fa-circle-play"></i></li>
+                        <li><i class="fa-solid fa-forward-step"></i></li>
+                        <li><i class="fa-solid fa-rotate-right"></i></li>
+                    </ul>
+                    <div class="flex">
+                        <div><small>0:25</small></div>
+                        <div class="bar">
+                            <div class="bar-inside position">
+                                <div class="circle-bar"></div>
+                            </div>
+                        </div>
+                        <div><small>4:35</small></div>
+                    </div>
+                </div>
+            </div>
+            <div class="right">
+                <div class="settings flex">
+                    <ul class="flex">
+                        <li><i class="fa-solid fa-list"></i></li>
+                        <li><i class="fa-solid fa-display"></i></li>
+                        <li><i class="fa-solid fa-volume-high"></i></li>
+                        <li class="flex">
+                            <div class="bar">
+                                <div class="bar-inside position">
+                                    <div class="circle-bar"></div>
+                                </div>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
     </footer>
 </body>
 </html>
