--- a/index.html
+++ b/index.html
@@ -134,9 +134,21 @@
                     <div class="container">
                         <h2>Artisti più popolari</h2>
                         <div><small class="txt-gray">Più ascolti, più accurati saranno i suggerimenti.</small></div>
-                        <div class="flex wrap txt-center">   
-                            <img class="circle" src="img/youg.jpeg" alt="Youg">
-                            <img class="circle" src="img/einaudi.jpeg" alt=""> 
+                        <div class="flex wrap txt-center"> 
+                            <div class="card">
+                                <div class="position">  
+                                    <img class="circle" src="img/youg.jpeg" alt="Youg">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Lana Del Ray</h3>
+                            </div>    
+                            <div class="card">
+                                <div class="position"> 
+                                    <img class="circle" src="img/einaudi.jpeg" alt="einaudi">
+                                    <div class="appear"><i class="fa-regular fa-circle-play"></i></div>
+                                </div>
+                                <h3>Einaudi</h3>
+                            </div>
                         </div>
                     </div>
             </section>
